Actualizado el authprovider. Actualizado a rc4. Solucionados problemas para traer data durante inicializacion

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
   "exclude": [
     "node_modules"
   ],
+  "filesGlob": [
+    "**/*.ts",
+    "**/*.tsx",
+    "!node_modules/**"
+  ],
   "compileOnSave": false,
   "atom": {
     "rewriteTsconfig": false
