--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-hello-world",
+  "name": "mobile2",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -19,11 +19,10 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
-    "@ionic/app-scripts": "^1.0.0",
     "@ionic/storage": "1.1.7",
     "@types/jasmine": "^2.5.40",
-    "angularfire2": "^2.0.0-beta.6",
-    "firebase": "^3.6.4",
+    "angularfire2": "^2.0.0-beta.7",
+    "firebase": "^3.6.5",
     "ionic-angular": "2.0.0-rc.4",
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
@@ -32,7 +31,6 @@
     "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.47",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
